<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ruptech.ai.me.UploadPhotoActivity"
    android:background="#00000000"
    android:alpha="0.5">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/layout_upload_photo_image">

        <ImageView
            android:id="@+id/imageView_upload_photo_image"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:src="@drawable/default_photo"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/layout_upload_photo_button"
        android:layout_below="@+id/layout_upload_photo_image">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="camera"
            android:text="@string/button_take_a_photo"
            android:background="@color/primary"
            android:id="@+id/button_upload_photo_take"
            android:layout_above="@+id/button_upload_photo_select"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="gallery"
            android:text="@string/button_select_a_photo"
            android:background="@color/primary"
            android:id="@+id/button_upload_photo_select"
            android:layout_above="@+id/button_upload_photo_save"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/ok"
            android:background="@color/primary"
            android:id="@+id/button_upload_photo_save"
            android:layout_above="@+id/button_upload_photo_cancel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:onClick="cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/primary"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_upload_photo_cancel"/>
    </RelativeLayout>

</RelativeLayout>
