<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ruptech.ai.me.UploadPhotoActivity"
    android:background="#bb000000">
    <RelativeLayout
        android:id="@+id/top_me_photo"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/layout_border"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toolbar_me_photo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/pager_title_color"
            android:layout_alignParentLeft="true"
            android:text="@string/tab_title_me" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_me_photo"
        android:id="@+id/layout_upload_photo_image"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:id="@+id/imageView_upload_photo_image"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:src="@drawable/default_photo"
            android:layout_centerInParent="true"
            android:alpha="1.0" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/layout_upload_photo_button"
        android:layout_below="@+id/layout_upload_photo_image"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="camera"
            android:text="@string/button_take_a_photo"
            android:background="@drawable/layout_photo_button"
            android:id="@+id/button_upload_photo_take"
            android:layout_above="@+id/button_upload_photo_select"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="gallery"
            android:text="@string/button_select_a_photo"
            android:background="@drawable/layout_photo_button"
            android:id="@+id/button_upload_photo_select"
            android:layout_above="@+id/button_upload_photo_save"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/change_photo"
            android:background="@drawable/layout_photo_button"
            android:id="@+id/button_upload_photo_save"
            android:layout_above="@+id/button_upload_photo_cancel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />

        <Button
            android:onClick="cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/layout_photo_button"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_upload_photo_cancel"
            android:layout_marginTop="3dp" />
    </RelativeLayout>

</RelativeLayout>
